feat: implement digram with genres
