# src/app/core/api/model/index.ts
@@ -58,6 +58,11 @@ export * from './feedbackMessageResponseStatus';
 export * from './feedbackMessagesPageResponse';
 export * from './feedbackUserMessagePayload';
 export * from './fileUploadDto';
+export * from './filterUsageAnalyticsControllerGetFilterUsageFilterType';
+export * from './filterUsageAnalyticsControllerGetFilterUsageParams';
+export * from './filterUsageItemResponseDto';
+export * from './filterUsageItemResponseDtoFilterType';
+export * from './filterUsagePageResponseDto';
 export * from './genre';
 export * from './genrePaginationResponseDto';
 export * from './genresNsiControllerGetInfiniteParams';
